# gravity_simulation_2D

./: CMakeLists.txt  README.md
inc/: gravity.h  main.h
src/: gravity.c  main.c
